Predial (bases presuntivas) - atencion a documento: "IncidentesPATY"

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5623,18 +5623,18 @@ predial.basespresun.datospredio.titulo=Datos del predio
 predial.basespresun.datospredio.areterreno=Área de terreno (m2)*
 predial.basespresun.datospredio.caracpredio=Caracterización del predio
 predial.basespresun.datospredio.areaconstru=Área de construcción(m2)*
-predial.basespresun.datospredio.prophorizon=Propiedad Horizontal
-predial.basespresun.datospredio.precalculo=Pre calculo
+predial.basespresun.datospredio.prophorizon=Propiedad horizontal
+predial.basespresun.datospredio.precalculo=Precálculo
 
 predial.basespresun.datliquidacion.titulo=Datos de liquidación
 predial.basespresun.datliquidacion.porcepropiedad=Porcentaje de propiedad
 predial.basespresun.datliquidacion.calidad=Calidad de sujeción
 predial.basespresun.datliquidacion.tarliqui=Tarifa liquidación
-predial.basespresun.datliquidacion.destino=Destino Hacendario
+predial.basespresun.datliquidacion.destino=Destino hacendario
 predial.basespresun.datliquidacion.basegrav=Base gravable
-predial.basespresun.datospredio.baseGravableCalc=Base gravable calc.
+predial.basespresun.datospredio.baseGravableCalc=Base gravable calculada
 predial.basespresun.datospredio.confirmarBGF=Confirmar BG final
-predial.basespresun.datospredio.actividadEconomica=Actividad Económica
+predial.basespresun.datospredio.actividadEconomica=Actividad económica
 predial.basespresun.datospredio.usoSuelo=Uso de suelo
 predial.basespresun.datospredio.tarifa=Tarifa
 
@@ -6668,7 +6668,7 @@ obligacion.sujeto.reteica.obContrato=Objeto contrato
 obligacion.sujeto.reteica.fecvencimiento=Fecha de vencimiento
 
 #Mensaje para predial del SPAC
-predial.mensaje.spac= Si te acoges al pago por cuotas debes dar click en firmar declaración, luego seleccionar el botón de SPAC y por último dar click en "Presentar Declaración"
+predial.mensaje.spac= Si te acoges al pago por cuotas, debes dar clic en “solo firmar” si eres persona natural, o en “Firmar y agregar” si eres una persona jurídica - empresa. Posteriormente seleccionar el botón SPAC y por último da clic en ”Presentar declaración”
 
 #Mensaje par obligaciones de RETEICA
 obligaciones.mensaje.reteica=Los contribuyentes no tienen obligaciones pendientes por concepto del impuesto ReteICA
@@ -6706,7 +6706,7 @@ predial.declaracion.vehiculo.liq.acogerseacto=¿Desea acogerse al acto oficial?
 
 
 #Mensaje para vehiculos del SPAC
-sobre.vehiculo.mensaje.spac= Si te acoges al pago por cuotas debes dar click en firmar declaración, luego seleccionar el botón de SPAC y por último dar click en "Presentar Declaración"
+sobre.vehiculo.mensaje.spac= Si te acoges al pago por cuotas, debes dar clic en “solo firmar” si eres persona natural, o en “Firmar y agregar” si eres una persona jurídica - empresa. Posteriormente seleccionar el botón SPAC y por último da clic en ”Presentar declaración”
 
 
 
