Descarga factura VA - mostrar mensaje de alerta dependiendo del impuesto

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5698,6 +5698,8 @@ descargaFacturaVA.descarga.opcionImpuesto2=Vehicular
 descargaFacturaVA.descarga.etiqueta.opcionImpuesto0=CHIP / Placa
 descargaFacturaVA.descarga.etiqueta.opcionImpuesto1=CHIP
 descargaFacturaVA.descarga.etiqueta.opcionImpuesto2=Placa
+descargaFacturaVA.descarga.subtitulo.opcionImpuesto1=Aclaración: en este botón no están disponibles las facturas de predios nuevos, sin CHIP, con algún porcentaje de exención, de vigencias anteriores a 2022 ni de los que la SDH no tiene información.
+descargaFacturaVA.descarga.subtitulo.opcionImpuesto2=Aclaración: aquí no están disponibles las facturas de vehículos que no pudieron homologarse con una línea vehicular ni que presentan inconsistencias en la información que sirve de base para expedir la factura ni de vigencias anteriores a 2022.
 
 
 vehiculos.detalle.blindado.=-
