Descarga factura VA -  cambiar de vehicular por Vehículos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5694,7 +5694,7 @@ descargaFacturaVA.descarga.campo.tipoDocumento=Tipo de Documento
 descargaFacturaVA.descarga.campo.numeroDocumento=Número de documento
 descargaFacturaVA.descarga.opcionImpuesto0=Seleccionar
 descargaFacturaVA.descarga.opcionImpuesto1=Predial
-descargaFacturaVA.descarga.opcionImpuesto2=Vehicular
+descargaFacturaVA.descarga.opcionImpuesto2=Vehículos
 descargaFacturaVA.descarga.etiqueta.opcionImpuesto0=CHIP / Placa
 descargaFacturaVA.descarga.etiqueta.opcionImpuesto1=CHIP
 descargaFacturaVA.descarga.etiqueta.opcionImpuesto2=Placa
