--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2019,6 +2019,7 @@ mirit.constents.title=Autorizaciones
 mirit.constents.notifications=Autorizo el uso del buzón electrónico para recibir notificaciones.
 mirit.constents.useOfInformation=Autorizo uso de la anterior información para fines institucionales.
 mirit.constents.termsConditions=Estoy de acuerdo con los
+mirit.constents.descuento1PC=Debes regresar al menú "Facturación" y seleccionar “Descargar factura”, para ver reflejado el descuento
 
 mirit.pj.name=Nombre o razón social
 mirit.pj.personalData.title=Mis datos Básicos persona jurídica
