Registro de usuario - Ajuste para evitar enviar tipo de documento "Seleccionar" al WS

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1862,6 +1862,7 @@ register.userNotFound.proceso3.4=<b>Delineación Urbana:</b> Radicado
 register.userNotFound.proceso3.5=<b>Publicidad Exterior Visual:</b> Resolución
 register.userNotFound.proceso3.6=<b>Sobretasa a la Gasolina:</b> Cámara de comercio no mayor a 3 meses
 register.userAlreadyRegistered=Usuario ya existente, favor de recuperar contraseña
+register.error.tipoid=El tipo de identificación no puede ser vacío
 
 taxpayers.title=Contribuyente
 taxpayers.description=Ingresa aquí para realizar tus transacciones en línea
