Registro de usuario - Agregar tipo de documento CD

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
@@ -6107,6 +6107,7 @@ register.id.types.NITE=NITE
 register.id.types.NUIP=NUIP
 register.id.types.PA=Pasaporte
 register.id.types.TI=TI
+register.id.types.CD=CD Carnet Diplomático 
 
 predial.unificado.declaraciones=Declaraciones
 predial.unificado.declaraciones.chip=CHIP
