--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2664,6 +2664,7 @@ register.id.types.NUIP=NUIP Número Único de Identificación Personal
 register.id.types.PA=PA Pasaporte
 register.id.types.TI=TI Tarjeta de Identidad
 register.id.types.TIE=TIE Tarjeta de Identidad de Extranjero
+register.id.types.CD=CD Carnet Diplomático 
 
 
 rit.tratamiento.t=
