Predial - Ajustes varios

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -6674,7 +6674,7 @@ obligacion.sujeto.reteica.obContrato=Objeto contrato
 obligacion.sujeto.reteica.fecvencimiento=Fecha de vencimiento
 
 #Mensaje para predial del SPAC
-predial.mensaje.spac= Si te acoges al pago por cuotas, debes dar clic en “solo firmar” si eres persona natural, o en “Firmar y agregar” si eres una persona jurídica - empresa. Posteriormente seleccionar el botón SPAC y por último da clic en ”Presentar declaración”
+predial.mensaje.spac= Si te acoges al pago por cuotas, debes dar clic en “solo firmar” si eres persona natural, o en “Firmar y agregar” si eres una persona jurídica - empresa. Posteriormente selecciona el botón SPAC y por último da clic en ”Presentar declaración”
 
 #Mensaje par obligaciones de RETEICA
 obligaciones.mensaje.reteica=Los contribuyentes no tienen obligaciones pendientes por concepto del impuesto ReteICA
@@ -6712,7 +6712,7 @@ predial.declaracion.vehiculo.liq.acogerseacto=¿Desea acogerse al acto oficial?
 
 
 #Mensaje para vehiculos del SPAC
-sobre.vehiculo.mensaje.spac= Si te acoges al pago por cuotas, debes dar clic en “solo firmar” si eres persona natural, o en “Firmar y agregar” si eres una persona jurídica - empresa. Posteriormente seleccionar el botón SPAC y por último da clic en ”Presentar declaración”
+sobre.vehiculo.mensaje.spac= Si te acoges al pago por cuotas, debes dar clic en “solo firmar” si eres persona natural, o en “Firmar y agregar” si eres una persona jurídica - empresa. Posteriormente selecciona el botón SPAC y por último da clic en ”Presentar declaración”
 
 
 
