--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5299,6 +5299,7 @@ predialuno.firma.presendecla=Presentar declaración
 predialuno.firma.cancelar=Cancelar
 predialuno.firma.paglinea=Pagar en línea
 predialuno.firma.spac=SPAC
+predialuno.firma.seccionFirmas=Sección de firmas
 
 
 predialdos.generales.titulo=Impuestos de Predial
