Ajustes para el impuesto ICA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3675,6 +3675,7 @@ obligacion.inicial.ica.totPagar=Total a pagar
 obligacion.inicial.ica.obcontra=Objeto contrato
 obligacion.inicial.ica.rop=Generar ROP
 obligacion.inicial.ica.pagar=Pagar
+obligacion.inicial.ica.spac= Cupones									
 
 obligacion.inicial.publicidad.aniograv= Año gravable
 obligacion.inicial.publicidad.numresol= Número de resolución
@@ -6650,7 +6651,11 @@ spac.table.descargar=Imprimir Cupón
 buzon.mirit.mensaje=Señor contribuyente para activar o desactivar la Notificación electrónica de Actos oficiales en el buzón electrónico ingresa a
 
 #Estado de cuenta para RETEICA
-edocuenta.inicial.reteica.titulo= RETEICA
+edocuenta.inicial.reteica.titulo = RETEICA
+edocuenta.inicial.reteica.objeto = Objeto
+edocuenta.inicial.reteica.impuesto = Impuesto
+edocuenta.inicial.reteica.saldocargo = Saldo a cargo
+edocuenta.inicial.reteica.saldofavor = Saldo a favor
 edocuenta.inicial.reteica.chip = CHIP
 edocuenta.inicial.reteica.matricula = Matrícula Inmobiliaría
 edocuenta.inicial.reteica.direccion = Dirección
@@ -6662,8 +6667,6 @@ edocuenta.inicial.reteica.aniograv=Año gravable
 edocuenta.inicial.reteica.desthacen=Destino hacendario
 edocuenta.inicial.reteica.estado=Concepto
 edocuenta.inicial.reteica.participa= % Participación
-edocuenta.inicial.reteica.saldocargo= Saldo a cargo
-edocuenta.inicial.reteica.saldofavor=Saldo a favor
 edocuenta.inicial.reteica.total=Total
 
 #Obligaciones Pendientes RETEICA
